--- a/ATM/appsettings.json
+++ b/ATM/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+      "AtmDb": "Filename=./atm.db"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
